--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Portugal -- History'
 - !lcc 'DP'
+- GITenberg
 title: 'The Story of the Nations: Portugal'
 url: http://www.gutenberg.org/ebooks/45581
